--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -13,7 +13,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/rectangle_4"
-        tools:layout_editor_absoluteX="-26dp" />
+        tools:layout_editor_absoluteX="-26dp"
+
+        />
 
     <ImageView
         android:id="@+id/imageView2"
