--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -7,15 +7,15 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="462dp"
-        android:layout_height="557dp"
+        android:layout_width="535dp"
+        android:layout_height="569dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/rectangle_4"
-        tools:layout_editor_absoluteX="-26dp"
-
-        />
+        app:srcCompat="@drawable/rectangle_4" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -56,17 +56,17 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/btnLeng"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.839"
+        app:layout_constraintVertical_bias="0.494"
         app:srcCompat="@drawable/pngitem_3280205_1" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/btnMat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
         android:id="@+id/btnLeng"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="40dp"
         android:text="Lengua y Literatura"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +86,7 @@
         android:id="@+id/btnMat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
+        android:layout_marginBottom="60dp"
         android:text="Matemática"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
