Arreglo de interfaces

--- a/app/src/main/res/layout/activity_lenguaje.xml
+++ b/app/src/main/res/layout/activity_lenguaje.xml
@@ -15,7 +15,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/captura_de_pantalla__209__1" />
+        app:srcCompat="@drawable/logopng" />
 
     <ImageView
         android:id="@+id/imgAbcLogo"
@@ -126,7 +126,7 @@
         app:layout_constraintEnd_toEndOf="@+id/imgFondo"
         app:layout_constraintHorizontal_bias="0.88"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/abecedario" />
+        app:srcCompat="@drawable/abc" />
 
     <ImageView
         android:id="@+id/imageView28"
@@ -142,7 +142,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/vocales" />
+        app:srcCompat="@drawable/aei" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
